Fixed that when jumping to an anchor the navbar covered a part of it

--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -39,7 +39,8 @@ body {
 }
 
 .featurette-divider {
-    margin: 80px 0;
+	padding-top: 40px;
+	margin-top: 40px;
 }
 
 .featurette {
